Minor project adjustments

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"game_folder":"F:\\SteamLibrary\\steamapps\\common\\Rain World",
+	"game_folder":"C:\\Program Files (x86)\\Steam\\steamapps\\common\\Rain World",
 	"screenshots_folder":"E:\\Henpemaz\\Art\\Rainworld\\Rain World Merged Screenshots",
 	"output_folder":".\\docs\\resources",
 	"relative_output_folder":"./resources"
