New map generation algo and test page.
Exported tiles not included because 100k files and almost 2GB

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"game_folder": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\Rain World",
-	"screenshots_folder": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\Rain World\\Export",
-	"output_folder": ".\\docs\\resources",
+	"screenshots_folder": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\Rain World - Dev\\Export",
+	"output_folder": ".\\docs\\tiles\\modded",
 	"relative_output_folder": "./resources"
 }
